Adding and evenement and modification of the team's page

--- a/public/pages/boutique.html
+++ b/public/pages/boutique.html
@@ -113,6 +113,7 @@
                             <p>Edition Classique</p>
                             <div class="prix">20€</div>
                             <div class="size-container">
+                                <div class="size">10y</div>
                                 <div class="size">XS</div>
                                 <div class="size">S</div>
                                 <div class="size">M</div>
@@ -258,7 +259,7 @@
 
                     <div class="question-reponse">
                         <h3>Comment régler et récupérer mon article s'il est disponible ?</h3>
-                        <p>Si votre article est disponible, vous devrez venir le régler en espèces lors du créneau réservé le mercredi de 18h à 20h. L'article vous sera remis en main propre suite à ce règlement. Si l'article n'est pas disponible, nous vous invitons à patienter jusqu'au prochain réapprovisionnement.</p>
+                        <p>Si votre article est disponible, vous devrez venir le régler en espèces ou par virement instantané lors du créneau réservé le mercredi de 18h à 20h. L'article vous sera remis en main propre suite à ce règlement. Si l'article n'est pas disponible, nous vous invitons à patienter jusqu'au prochain réapprovisionnement.</p>
                     </div>
 
                     <div class="question-reponse">
