--- a/public/pages/evenements.html
+++ b/public/pages/evenements.html
@@ -113,7 +113,7 @@
                     <div class="box">
                         <img class="horizontal-image" src="./../assets/evenements/Sortie_Grand_Rex/Presentation.jpeg" alt="">
                         <div class="content">
-                            <h4>Le Grand Rex pour nos équipes féminines </h4>
+                            <h4>Le Spectacle au Grand Rex</h4>
                             <h5>27 Décembre 2023</h5>
                             <a href="./evenements/Sortie_Grand_Rex.html">Lire l'article</a>
                         </div>
@@ -123,7 +123,7 @@
                         <img class="horizontal-image" src="./../assets/evenements/Sortie_Bowling_U13/Presentation.jpeg" alt="">
                         <div class="content">
                             <h4>Sortie Bowling et Laser-Game pour les U-13M</h4>
-                            <h5>27 Décembre 2023</h5>
+                            <h5>27 Décembre 2023 - 3 janvier 2024</h5>
                             <a href="./evenements/Sortie_Noel_U13.html">Lire l'article</a>
                         </div>
                     </div>
@@ -140,9 +140,18 @@
                     <div class="box">
                         <img class="horizontal-image" src="./../assets/evenements/Noel_U7/Presentation.jpeg" alt="">
                         <div class="content">
-                            <h4>Le Père Noël à l'entraînement des U7/Baby-Basket.</h4>
+                            <h4>Le passage du Père Noël au Baby-Basket.</h4>
                             <h5>17 Décemebre 2032</h5>
                             <a href="./evenements/Noel_Baby_basket.html">Lire l'article</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <img class="vertical-image" src="./../assets/evenements/Club/Club_3x3_2023/Presentation.jpg" alt="">
+                        <div class="content">
+                            <h4>Compétition club de 3x3</h4>
+                            <h5>03 Novembre 2023</h5>
+                            <a href="./evenements/club/Club_3x3_2023.html">Lire l'article</a>
                         </div>
                     </div>
 
@@ -168,7 +177,6 @@
                 <section>
                     <div class="container">
                         <div class="box">
-                            <img class="horizontal-image" src="./../assets/gallerie/test_gallery.jpeg" alt="">
                             <div class="content">
                                 <h4>Plateau de la gallete des rois U-9</h4>
                                 <h5>22 janvier 2024</h5>
