--- a/public/pages/evenements/Galette.html
+++ b/public/pages/evenements/Galette.html
@@ -86,7 +86,7 @@
                         <img src="../../assets/evenements/Galette/image1.jpeg" alt="">
                         <img src="../../assets/evenements/Galette/image2.jpeg" alt="">
                     </div>
-                    <p>La soirée a été honorée par la présence du Maire des Lilas, Lionel BENHAROUS, accompagné de l'élu des sports et du responsable des Lilas. Leur soutien a ajouté une dimension particulière à cet événement, renforçant les liens entre la municipalité et la communauté sportive du CSLR Basket.</p>
+                    <p>La soirée a été honorée par la présence du Maire des Lilas, Lionel BENHAROUS, accompagné de l'élu et le responsable des sports des Lilas Richard LE PONTOIS, Fabrice CONVERT. Leur soutien a ajouté une dimension particulière à cet événement, renforçant les liens entre la municipalité et la communauté sportive du CSLR Basket.</p>
                     <div class="gallery">
                         <img src="../../assets/evenements/Galette/image3.jpeg" alt="">
                         <img src="../../assets/evenements/Galette/image4.jpeg" alt="">
