--- a/public/pages/evenements/New_York_2024.html
+++ b/public/pages/evenements/New_York_2024.html
@@ -76,7 +76,7 @@
                 <article>
                     <h1>Un Voyage à New-York pour nos U-15M</h1>
 
-                    <p>Depuis novembre 2023, nos futurs champions de l'équipe U15 Masculine, accompagnés par les coaches géniaux Yanis et Nassim, ont pris les rênes des buvettes du club pour financer leur voyage aux États-Unis pendant les vacances de Pâques.</p>
+                    <p>Depuis novembre 2023, nos futurs champions de l'équipe U15 Masculine, accompagnés par les coachs géniaux Yanis et Nassim, ont pris les rênes des buvettes du club pour financer leur voyage aux États-Unis</p>
 
                     <p>L'aventure a commencé avec la gestion des buvettes du club le 18 novembre dernier. Nos jeunes joueurs ont montré une détermination incroyable et une belle cohésion d'équipe, tout en développant des compétences utiles qui vont au-delà du terrain.</p>
 
