--- a/public/pages/evenements/Sortie_Grand_Rex.html
+++ b/public/pages/evenements/Sortie_Grand_Rex.html
@@ -74,14 +74,15 @@
         <main>
             <section>
                 <article>
-                    <h1>Les Jeunes Basketteuses Enchantées par la Féérie des Eaux au Grand Rex</h1>
-                    <p>Les catégories U11, U13 et U15 filles du basketball ont vécu une soirée inoubliable au Grand Rex. Le spectacle de la Féérie des Eaux a transporté les jeunes athlètes dans un monde magique, offrant une pause bienvenue loin du terrain de basket.</p>
+                    <h1>Les Jeunes Basketteurs Enchantés par la Féérie des Eaux au Grand Rex</h1>
+                    <p>Les catégories U7, U9, U11, ainsi que les U13 et U15 filles du basketball ont vécu une soirée inoubliable au Grand Rex. Le spectacle de la Féérie des Eaux a transporté les jeunes athlètes dans un monde magique, offrant une pause bienvenue loin du terrain de basket.</p>
                     <p>Les jeux de lumières, les effets spéciaux et la musique envoûtante ont créé une atmosphère féerique qui a captivé les basketteuses. L'initiative a renforcé les liens d'équipe, offrant aux joueuses une expérience artistique unique.</p> 
-                    <p>Pour les entraineurs et parents accomagnateurs, cette sortie culturelle était une occasion précieuse d'élargir les horizons des jeunes talents. La soirée s'est conclue sous les applaudissements, laissant aux joueuses des souvenirs magiques à emporter dans leur parcours sportif.</p>                                       
+                    <p>Pour les entraineurs et parents accomagnateurs, cette sortie culturelle était une occasion précieuse d'élargir les horizons des jeunes talents. La journée s'est conclue sous les applaudissements, laissant aux joueurs des souvenirs magiques à emporter dans leur parcours sportif.</p>                                       
                     
                     <div class="gallery">
                         <img src="../../assets/evenements/Sortie_Grand_Rex/image_1.jpeg" alt="">
-                        <img src="../../assets/evenements/Sortie_Grand_Rex/image_2.jpeg" alt="">
+                        <img src="../../assets/evenements/Sortie_Grand_Rex/image2.jpg" alt="">
+                        <img src="../../assets/evenements/Sortie_Grand_Rex/image3.jpg" alt="">
                     </div>
             
                     <p>Merci à tous ceux qui ont participé et contribué à faire de cette sortie un succès.</p>
