--- a/public/pages/inscription.html
+++ b/public/pages/inscription.html
@@ -86,9 +86,9 @@
 
                     <p>Nous sommes ravis de voir votre intérêt pour notre club de basket. Actuellement, nous ne sommes pas en mesure d'accepter de nouvelles inscriptions, mais ne vous inquiétez pas, nous nous préparons pour la prochaine saison !</p>
 
-                    <p>Si vous êtes impatient(e) de faire partie de l'aventure CSLR Basket, n'hésitez pas à nous contacter en utilisant le formulaire ci-dessous. Nous serons ravis de répondre à toutes vos questions, de discuter, et de vous tenir informé(e) dès que les inscriptions pour la prochaine saison seront ouvertes.</p>
+                    <p>Si vous êtes impatient(e)s de faire partie de l'aventure CSLR Basket, n'hésitez pas à nous contacter en utilisant le formulaire de contact. Nous serons ravis de répondre à toutes vos questions, de discuter, et de vous tenir informé(e)s dès que les inscriptions pour la prochaine saison seront ouvertes.</p>
 
-                    <p>Votre intérêt et votre enthousiasme sont précieux pour nous, et nous sommes impatients de vous accueillir prochainement. Suivez-nous sur les réseaux sociaux pour rester informé(e) de toutes les actualités et annonces importantes.</p>
+                    <p>Votre intérêt et votre enthousiasme sont précieux pour nous, et nous sommes impatients de vous accueillir prochainement. Suivez-nous sur les réseaux sociaux pour rester informé(e)s de toutes les actualités et annonces importantes.</p>
 
                     <p class="event-details">L'équipe du CSLR Basket</p>
                 </article>
