--- a/public/index.html
+++ b/public/index.html
@@ -153,15 +153,24 @@
 
                     <div class="container">                  
                         <div class="image-container">
-                            <img src="assets/matchs/Matchs_results.png" alt="">
+                            <img src="assets/matchs/Résultat des matchs Noir.jpg" alt="">
                         </div>
 
                         <div class="image-container">
-                            <img src="assets/matchs/Matchs_results.png" alt="">
+                            <img src="assets/matchs/Résultat des matchs Noir.jpg" alt="">
                         </div>
                     </div>
                     <p>Pensez à vous préparer pour les matchs de la semaine prochaine, afin de venir soutenir nos équipes qui sont prêtes à relever de nouveaux défis !</p>
                     
+                    <div class="container">                  
+                        <div class="image-container">
+                            <img src="assets/matchs/Match à domicile Insta.jpg" alt="">
+                        </div>
+
+                        <div class="image-container">
+                            <img src="assets/matchs/Match à l'extérieur Insta.jpg" alt="">
+                        </div>
+                    </div>
                     <p>Restez connectés pour les mises à jour hebdomadaires, et n'oubliez pas de venir encourager nos équipes lors de ces matchs cruciaux. Ensemble, nous formons une communauté passionnée qui soutient nos joueurs à chaque matchs !</p>
                     <p class="event-details">L'équipe du CSLR Basket</p>
                 </article>
