--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
         <main>
             <div id="bandeau">
-                <h1>Bievenue sur le site du CSLR-Basket</h1>
+                <h1>Bienvenue sur le site du CSLR-Basket</h1>
             </div>
 
             <div id="actualites">
@@ -60,8 +60,8 @@
                         <div class="item" onclick="redirigerVersPage('page/evenements/club/New_York_2024.html')">
                             <img src="assets/evenements/Club/New_York_2024/Miniature.jpg" alt="">
                             <div class="description">
-                                <h3>Le Voyage à New-York pour les U-15M</h3>
-                                <p>Depuis novembre 2023, nos futurs champions de l'équipe U15 Masculine, accompagnés par les coachs géniaux Yanis et Nassim, ont pris les rênes des buvettes du club pour financer ...</p>
+                                <h3>New-York pour les U-15M</h3>
+                                <p>Le CSLR basket a l'envie de faire voyager ses jeunes basketteurs dans la ville de New-York ...</p>
                                 
                             </div>
                         </div>
@@ -69,16 +69,16 @@
                         <div class="item" onclick="redirigerVersPage('page/evenements/club/galette_2024.html')">
                             <img src="assets/evenements/Club/Galette_2024/Miniature.png" alt="">
                             <div class="description">
-                                <h3>La Galette des rois du CSLR 2024</h3>
-                                <p>Le vendredi 26 janvier 2024, le Cercle Sportif Lilas Romainville Basket a organisé un événement exceptionnel à l'occasion de la galette des rois. L'événement ...</p>
+                                <h3>La Galette des rois du CSLR</h3>
+                                <p>Le vendredi 26 janvier 2024, le CSLR a organisé un événement pour la galette des rois ...</p>
                             </div>
                         </div>
 
                         <div class="item" onclick="redirigerVersPage('page/evenements/club/Olympiades_2024.html')">
                             <img src="assets/evenements/Club/Olympiades_Inclusion_23/Miniature.png" alt="">
                             <div class="description">
-                                <h3>Les Olypiades de L'inclusion</h3>
-                                <p>Le samedi 13 janvier 2024, le club a uni ses forces avec la ville des Lilas pour organiser les Olympiades de l'inclusion au gymnase Rabeyrolles. Une journée ...</p>
+                                <h3>Les Olympiades de L'inclusion</h3>
+                                <p>Le club a uni ses forces avec la ville des Lilas pour organiser les Olympiades de l'inclusion ...</p>
                             </div>
                         </div>
                     </div> 
